Add Lua parser