@@ -6,7 +6,7 @@
 
   <groupId>fr.osallek</groupId>
   <artifactId>clausewitz-parser</artifactId>
-  <version>1.1.0</version>
+  <version>1.1.1</version>
 
   <name>Clausewitz Parser</name>
 
@@ -22,7 +22,7 @@
 
     <slf4j.version>2.0.0-alpha1</slf4j.version>
     <logback.version>1.3.0-alpha5</logback.version>
-    <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
+    <junit.version>5.7.0</junit.version>
   </properties>
 
   <dependencies>
@@ -40,6 +40,12 @@
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
       <version>${logback.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
@@ -62,6 +68,21 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${maven-compiler-plugin.version}</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven-surefire-plugin.version}</version>
+        <configuration>
+          <argLine>--add-opens fr.osallek.clausewitzparser/fr.osallek.clausewitzparser=ALL-UNNAMED</argLine>
+        </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
+          </dependency>
+        </dependencies>
       </plugin>
     </plugins>
   </build>
